deployment/feature-based/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aggregation-<BRANCH>
  name: aggregation-<BRANCH>
  namespace: sub-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregation-<BRANCH>
  template:
    metadata:
      labels:
        app: aggregation-<BRANCH>
      name: aggregation-<BRANCH>
    spec:
      containers:
        - image: <IMAGE>
          imagePullPolicy: IfNotPresent
          name: aggregation-service
          ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub
      restartPolicy: Always
      volumes:
        - name: db-creation-script
          configMap:
            name: db-<BRANCH>-env
