deployment/feature-based/all.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aggregation-<BRANCH>
  name: aggregation-<BRANCH>
  namespace: sub-id
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: aggregation-<BRANCH>
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregation-<BRANCH>
  namespace: sub-id
  annotations:
    ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.org/client-max-body-size: '10m'
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
    nginx.ingress.kubernetes.io/client-max-body-size: '10m'

spec:
  ingressClassName: nginx
  rules:
    - host: <BRANCH>-aggregation.subsocial.network
      http:
        paths:
          - backend:
              service:
                name: aggregation-<BRANCH>
                port:
                  number: 3000
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - <BRANCH>-aggregation.subsocial.network
      secretName: subsocial-ssl
